switch to arkham.build card data source move configuration for tsv program into single json various fixes and improvements incl. possible support for taboo cards